Fixing post spacing/images and hover effects

--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,13 @@ p, h1, h2, h3, h4, h5, h6 {
   src: url('../public/fonts/PlusJakartaSans-VariableFont_wght.ttf');
 }
 
+
+/* TODO
+   fix inline width of posts
+   organize css 
+   fix post time spacing w/ image
+*/
+
 body {
   background-color: var(--neutral-light-greyish-blue2);
   font-family: var(--font-family);
@@ -108,7 +115,7 @@ ol {
 li {
   display: grid;
   grid-template-columns: 20% auto;
-  grid-template-rows: auto;
+  grid-template-rows: auto auto;
   align-items: center;
   border-radius: 0.4rem;
   margin-block: 2rem;
@@ -117,20 +124,49 @@ li {
 }
 
 .post {
-  grid-column: 2/2;
+  grid-column: 1/1;
+}
+
+.recent-post {
+  color: var(--neutral-dark-blue);
+  font-weight: var(--fw-800);
+  cursor: pointer;
 }
 
 .post-time {
-  grid-column: 2/2;
+  grid-column: 1/1;
 }
 
 .post-comments {
   grid-column: 1/3;
+  grid-row: 3;
+  padding-block: 1rem;
+  margin-block: 1rem;
+  padding-inline: 1rem;
+  border: solid 0.01rem var(--nuetral-grayish-blue);
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+
+.post-comments:hover {
+  background-color: var(--neutral-light-greyish-blue1);
+}
+
+.channel {
+  color: var(--primary-blue);
+  font-weight: var(--fw-800);
+  cursor: pointer;
 }
 
 .user-name {
   font-weight: var(--fw-800);
   color: var(--neutral-dark-blue);
+  padding-right: 0.2rem;
+  cursor: pointer;
+}
+
+.user-name:hover {
+  color: var(--primary-blue);
 }
 
 button {
@@ -138,6 +174,10 @@ button {
   background-color: transparent;
   color: var(--nueutral-dark-grayish-blue);
   cursor: pointer;
+}
+
+button:hover {
+  color: var(--primary-blue);
 }
 
 .notification {
@@ -164,12 +204,22 @@ button {
 img {
   max-width: 60%; 
   grid-column: 1/1;
-  align-self: center;
-  justify-self: center;
+  grid-row: 1/1;
+  align-self: first baseline;
+}
+
+.post-container {
+  display: grid;
+  grid-template-columns: 75% auto;
+  grid-template-rows: auto auto;
 }
 
 .post-pic {
-  max-width: 40%;
+  max-width: 50%;
+  grid-row: 1/3;
+  grid-column: 2/2;
+  justify-self: last baseline;
+  cursor: pointer;
 }
 
 
